--- a/views/add-product.html
+++ b/views/add-product.html
@@ -13,7 +13,7 @@
         <nav>
             <ul>
                 <li><a href="/">Shop</a></li>
-                <li><a href="/admin/add-product">Add Product</a></li>
+                <li><a href="/admin/add-product">Add Productrr</a></li>
             </ul>
         </nav>
     </header>
