--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -1,1 +1,10 @@
-<h1>All admin Products</h1>
+<%- include('../includes/head.ejs') %>
+<link rel="stylesheet" href="/css/product.css">
+</head>
+
+<body>
+  <%- include('../includes/navigation.ejs') %>
+
+  <h1>All admin Products</h1>
+
+  <%- include('../includes/end.ejs') %>
