--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -1,1 +1,10 @@
-<h1>index</h1>
+<%- include('../includes/head.ejs') %>
+<link rel="stylesheet" href="/css/product.css">
+</head>
+
+<body>
+  <%- include('../includes/navigation.ejs') %>
+
+  <h1>Index</h1>
+
+  <%- include('../includes/end.ejs') %>
