--- a/public/css/main.css
+++ b/public/css/main.css
@@ -19,6 +19,10 @@ form {
   display: inline;
 }
 
+img{
+  width: 20rem;
+}
+
 .main-header {
   width: 100%;
   height: 3.5rem;
@@ -55,6 +59,10 @@ form {
 .main-header__item a:active,
 .main-header__item a.active {
   color: #ffeb3b;
+}
+
+.centered{
+  text-align: center;
 }
 
 .mobile-nav {
