mysql queries for products

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -19,6 +19,10 @@ form {
   display: inline;
 }
 
+img{
+  max-width: 30rem;
+}
+
 .centered {
   text-align: center;
 }
@@ -194,6 +198,17 @@ form {
 .btn:hover,
 .btn:active {
   background-color: #00695c;
+  color: white;
+}
+
+.btn.danger {
+  color: red;
+  border-color: red;
+}
+
+.btn.danger:hover,
+.btn.danger:active {
+  background: red;
   color: white;
 }
 
