adding order model and order item model

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -19,12 +19,16 @@ form {
   display: inline;
 }
 
-img{
-  max-width: 30rem;
-}
-
 .centered {
   text-align: center;
+}
+
+.image {
+  height: 20rem;
+}
+
+.image img {
+  height: 100%;
 }
 
 .main-header {
