--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -18,9 +18,13 @@
                         </li>
                     <% }) %>
                 </ul>
-                <form action="/create-order">
-                  <button type="submit" class="btn">Order Now!</button>
-                </form>
+                <hr>
+                <div class="centered">
+                    <form action="/create-order" method="POST">
+                        <button type="submit" class="btn">Order Now!</button>
+                    </form>
+                </div>
+                
             <% } else { %>
                 <h1>No Products in Cart!</h1>
             <% } %>
